--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.0"
+    "handlebars": "^4.7.8",
+    "prettier": "3.3.3",
+    "vite": "^5.4.0",
+    "vite-plugin-handlebars": "^2.0.0"
+  },
+  "dependencies": {
+    "alpinejs": "^3.14.1",
+    "gsap": "^3.12.5"
   }
 }
