--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "handlebars": "^4.7.8",
     "prettier": "3.3.3",
+    "sass-embedded": "^1.77.8",
     "vite": "^5.4.0",
     "vite-plugin-handlebars": "^2.0.0"
   },
