--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,8 @@
 {
-  "printWidth": 120,
-  "tabWidth": 2,
-  "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always"
+  "printWidth": 108,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "bracketSpacing": true
 }
